--- a/VacationPy1.ipynb
+++ b/VacationPy1.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,6 +31,8 @@
     "\n",
     "# Import API key\n",
     "from api_keys import g_key\n",
+    "\n",
+    "gmaps.configure(g_key)\n",
     "\n"
    ]
   },
@@ -44,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +162,7 @@
        "5      MU  1.604115e+09  "
       ]
      },
-     "execution_count": 83,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -210,7 +212,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a557ff666f7c4f8dbc3b9095f8ba36f5",
+       "model_id": "33695a24e54c4a81ad5f9a870404d115",
        "version_major": 2,
        "version_minor": 0
       },
@@ -263,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
@@ -289,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +407,7 @@
        "4      SB             "
       ]
      },
-     "execution_count": 88,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,18 +428,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "list indices must be integers or slices, not str",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-89-e596579ea9d4>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     25\u001b[0m \u001b[1;31m#     print(json.dumps(response, indent=4, sort_keys=True))\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     26\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 27\u001b[1;33m     \u001b[0mname_hotel\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mresponse\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"results\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"name\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     28\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     29\u001b[0m \u001b[1;31m# Cannot figure out how to get past this point.  I keep receiving a TypeError: list indices must be integers or slices, not str\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: list indices must be integers or slices, not str"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bredasdorp is complete with hotel: Radisson Blu Polar Hotel, Spitsbergen\n",
+      "--------\n",
+      "Port Elizabeth is complete with hotel: Drivethru Surfcamps\n",
+      "--------\n",
+      "Bredasdorp is complete with hotel: Radisson Blu Polar Hotel, Spitsbergen\n",
+      "--------\n",
+      "Busselton is complete with hotel: Radisson Blu Polar Hotel, Spitsbergen\n",
+      "--------\n",
+      "Kirakira is complete with hotel: Radisson Blu Polar Hotel, Spitsbergen\n",
+      "--------\n",
+      "Albany is complete with hotel: Radisson Blu Polar Hotel, Spitsbergen\n",
+      "--------\n",
+      "Grand River South East is complete with hotel: Vardø Hotel AS\n",
+      "--------\n",
+      "Mahebourg is complete with hotel: Hotel Alma\n",
+      "--------\n",
+      "Albany is complete with hotel: Vardø Hotel AS\n",
+      "--------\n",
+      "Saint-Joseph is complete with hotel: Radisson Blu Polar Hotel, Spitsbergen\n",
+      "--------\n",
+      "Obluche is complete with hotel: Panorama Hotel\n",
+      "--------\n"
      ]
     }
    ],
@@ -467,26 +486,25 @@
     "\n",
     "    response = requests.get(base_url, params=params).json()    \n",
     "#     print(json.dumps(response, indent=4, sort_keys=True))    \n",
-    "\n",
-    "    name_hotel = response[\"results\"][\"name\"]\n",
-    "    \n",
+    "  \n",
     "# Cannot figure out how to get past this point.  I keep receiving a TypeError: list indices must be integers or slices, not str\n",
-    "#\n",
+    "# I Discovered that my issue was the I was missing the [0] JSON in the response syntax\n",
+    "# Before: hotel_name = response[\"results\"][\"name\"] (incorrect)\n",
+    "# AFTER: hotel_name = response[\"results\"][0][\"name\"] \n",
     "\n",
-    "\n",
-    "#     try:\n",
-    "#         hotel_name = response[\"results\"][\"name\"]      \n",
-    "#         hotel_df.loc[index, 'Hotel Name'] = hotel_name\n",
-    "#         print(f'{row[0]} is complete with hotel: {hotel_name}')\n",
-    "#     except Exception:\n",
-    "#         print(\"Missing field\")\n",
-    "#         hotel_df.loc[index, 'Hotel Name'] = \"No hotel\"\n",
-    "#     print('--------')    \n"
+    "    try:\n",
+    "        hotel_name = response[\"results\"][0][\"name\"]      \n",
+    "        hotel_df.loc[index, 'Hotel Name'] = hotel_name\n",
+    "        print(f'{row[0]} is complete with hotel: {hotel_name}')\n",
+    "    except Exception:\n",
+    "        print(\"Missing field\")\n",
+    "        hotel_df.loc[index, 'Hotel Name'] = \"No hotel\"\n",
+    "    print('--------')    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +550,7 @@
        "      <td>1.12</td>\n",
        "      <td>20.0</td>\n",
        "      <td>ZA</td>\n",
-       "      <td></td>\n",
+       "      <td>Radisson Blu Polar Hotel, Spitsbergen</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -544,7 +562,7 @@
        "      <td>9.66</td>\n",
        "      <td>16.0</td>\n",
        "      <td>ZA</td>\n",
-       "      <td></td>\n",
+       "      <td>Drivethru Surfcamps</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -556,7 +574,7 @@
        "      <td>1.12</td>\n",
        "      <td>20.0</td>\n",
        "      <td>ZA</td>\n",
-       "      <td></td>\n",
+       "      <td>Radisson Blu Polar Hotel, Spitsbergen</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -568,7 +586,7 @@
        "      <td>1.12</td>\n",
        "      <td>20.0</td>\n",
        "      <td>AU</td>\n",
-       "      <td></td>\n",
+       "      <td>Radisson Blu Polar Hotel, Spitsbergen</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -580,7 +598,7 @@
        "      <td>1.12</td>\n",
        "      <td>20.0</td>\n",
        "      <td>SB</td>\n",
-       "      <td></td>\n",
+       "      <td>Radisson Blu Polar Hotel, Spitsbergen</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -594,21 +612,22 @@
        "3       Busselton  78.22  15.64     17.60      72.0        1.12        20.0   \n",
        "4        Kirakira  78.22  15.64     17.60      72.0        1.12        20.0   \n",
        "\n",
-       "  Country Hotel Name  \n",
-       "0      ZA             \n",
-       "1      ZA             \n",
-       "2      ZA             \n",
-       "3      AU             \n",
-       "4      SB             "
+       "  Country                             Hotel Name  \n",
+       "0      ZA  Radisson Blu Polar Hotel, Spitsbergen  \n",
+       "1      ZA                    Drivethru Surfcamps  \n",
+       "2      ZA  Radisson Blu Polar Hotel, Spitsbergen  \n",
+       "3      AU  Radisson Blu Polar Hotel, Spitsbergen  \n",
+       "4      SB  Radisson Blu Polar Hotel, Spitsbergen  "
       ]
      },
-     "execution_count": 90,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "hotel_df.head() "
+    "hotel_df.head()\n",
+    "# print(hotel_df[['Lat', 'Lng']])"
    ]
   },
   {
@@ -622,6 +641,45 @@
     "* Hit the Google Places API for each city's coordinates.\n",
     "* Store the first Hotel result into the DataFrame.\n",
     "* Plot markers on top of the heatmap."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "33695a24e54c4a81ad5f9a870404d115",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(height='420px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Add marker layer ontop of heat map & Display figure\n",
+    "\n",
+    "# Convert Hotel Name to List\n",
+    "hotel_name = hotel_df[\"Hotel Name\"].tolist()\n",
+    "\n",
+    "# Generate Marker Map Layer\n",
+    "marker_locations = hotel_df[['Lat', 'Lng']]\n",
+    "\n",
+    "fig_14 = gmaps.figure()\n",
+    "markers = gmaps.marker_layer(marker_locations, \n",
+    "                            info_box_content=[f\"Hotel Name: {hotel}\" for hotel in hotel_name])\n",
+    "\n",
+    "fig_13.add_layer(markers)\n",
+    "fig_13"
    ]
   },
   {
